# utem-core

./: .dockerignore  .editorconfig  .gitignore  ADAPTER_SDK.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Dockerfile.standalone  PLAN.md  README.md  TODO.md  docker-compose.standalone.yml  docker-compose.yml  issues-to-fix  pom.xml  start.bat  stop.bat  utem.db-shm  utem.db-wal
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  utem-quality-gate.yml
ci-examples/: Jenkinsfile
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: EVENT_API.md  docker.md  rest.md
docs/guide/: auth.md  configuration.md  getting-started.md  installation.md
docs/reporters/: cucumber.md  cypress.md  jest.md  junit5.md  playwright.md  pytest.md  robot.md  testng.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/attachment/: AttachmentViewer.tsx
frontend/src/components/export/: ExportDropdown.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/qualitygate/: QualityGateBadge.tsx
frontend/src/components/step/: StepDetailPanel.tsx
frontend/src/components/tree/: TreeNode.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useApi.ts  useAttachmentViewer.ts  useWebSocket.ts
frontend/src/pages/: ArchivedPage.tsx  ComparisonPage.tsx  DashboardPage.tsx  FailureClustersPage.tsx  FlakinessPage.tsx  InsightsPage.tsx  JobRunsPage.tsx  JobsPage.tsx  LoginPage.tsx  NotificationsPage.tsx  PerformancePage.tsx  ProjectsPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SearchPage.tsx  TrendsPage.tsx  UsersPage.tsx
frontend/src/services/: websocket.ts
frontend/src/utils/: attachmentUtils.ts  format.ts  status.ts
reporter-cypress/: README.md  index.js  package.json
reporter-jest/: README.md  UtemReporter.js  package.json
reporter-junit5/: README.md  pom.xml
reporter-playwright/: README.md  package-lock.json  package.json  tsconfig.json
reporter-playwright/src/: UtemReporter.ts
reporter-pytest/: README.md  pyproject.toml
reporter-pytest/utem_pytest_reporter/: __init__.py  plugin.py
reporter-pytest/utem_pytest_reporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
reporter-pytest/utem_reporter/: __init__.py  plugin.py
reporter-robot/: README.md  pyproject.toml
reporter-robot/utem_robot_reporter/: __init__.py  listener.py
reporter-robot/utem_robot_reporter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reporter-testng/: README.md  pom.xml
src/main/resources/: application.properties
src/main/resources/static/: index.html
src/main/resources/static/assets/: index-B6QcFpbj.js  index-B7WOKizO.js  index-BHUl-n9Y.css  index-BbJPfLga.js  index-BeOSQ8GB.css  index-C5sctQik.css  index-CN_tLb3X.css  index-CYbct6EU.js  index-CimtqzUd.css  index-CuVLhtob.js  index-CvLeRNin.css  (+16 more)
src/test/resources/: application.properties
(+162 files in other folders)
