[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utem-robot-reporter"
version = "0.1.0"
description = "Real-time Robot Framework listener for UTEM Core — streams test results as tests run"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Saddam Hossain"},
]
keywords = ["robotframework", "robot", "testing", "reporting", "utem", "real-time"]
classifiers = [
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
# Zero runtime dependencies — uses only the Python standard library
dependencies = []

[project.urls]
Homepage = "https://github.com/shossain786/utem-core"
Repository = "https://github.com/shossain786/utem-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["utem_robot_reporter*"]
